[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Images/menu_background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/PlayButton.gd" type="Script" id=4]
[ext_resource path="res://font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/FPSCounter.gd" type="Script" id=6]
[ext_resource path="res://Sounds/click.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="PlayButton" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -92.5
margin_right = 103.499
margin_bottom = -7.5
texture_pressed = null
texture_hover = null
script = ExtResource( 4 )

[node name="Label" parent="PlayButton" index="0"]
text = "Play"

[node name="ExitButton" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.501
margin_top = 7.5
margin_right = 103.501
margin_bottom = 92.5

[node name="Label" parent="ExitButton" index="0"]
text = "Exit"

[node name="FPSCounter" type="Label" parent="."]
visible = false
margin_right = 13.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
script = ExtResource( 6 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.068
[connection signal="mouse_entered" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="PlayButton" method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]

[editable path="PlayButton"]

[editable path="ExitButton"]
